# document-to-markdown

./: README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: sync_hf_space.yaml
demo/: app.py  reboot_hf_space.py  requirements.txt
docs/: future-features-contributions.md
