[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "document-to-markdown"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]


[project.urls]
Documentation = "https://mozilla-ai.github.io/document-to-markdown/"
Issues = "https://github.com/mozilla-ai/document-to-markdown/issues"
Source = "https://github.com/mozilla-ai/document-to-markdown"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
namespaces = false

[tool.setuptools_scm]
